fixes resource links spacing in final grades card

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -650,7 +650,9 @@ body {
 					}
 				}
 			}
-			#grade_card_resources {}
+			#grade_card_resources {
+				.unstyled-list {padding-top: 10px;}
+			}
 		}
 	}
 	
